[gd_scene load_steps=19 format=3 uid="uid://dn5ia0uncdbrx"]

[ext_resource type="Texture2D" uid="uid://cx7ql0wqm2phj" path="res://Pad.png" id="1_4nvyi"]
[ext_resource type="Script" uid="uid://df0b125v17ip3" path="res://car_minigame.gd" id="1_d0wqu"]
[ext_resource type="Script" uid="uid://b4bn4arcunq4c" path="res://hand_car.gd" id="3_nlt58"]
[ext_resource type="Script" uid="uid://bj1svyviwv2ws" path="res://car.gd" id="3_offks"]
[ext_resource type="Texture2D" uid="uid://bwwqrf0a84kl1" path="res://hand-1.png" id="4_0lj0v"]
[ext_resource type="Script" uid="uid://dwi26df4y363g" path="res://old_tire.gd" id="4_13meq"]
[ext_resource type="Texture2D" uid="uid://c0c6icgnmchbt" path="res://car minigame/tire.png" id="4_dlhb1"]
[ext_resource type="Texture2D" uid="uid://c63xk0mf3puov" path="res://car minigame/Car_without_tire.png" id="5_0lj0v"]
[ext_resource type="Script" uid="uid://drjbhu575t5he" path="res://wrench.gd" id="5_6ox5g"]
[ext_resource type="Texture2D" uid="uid://cpjs4dkwylai1" path="res://car minigame/wrench.png" id="5_6x0t5"]
[ext_resource type="Script" uid="uid://dhshf1u5q0omr" path="res://new_tire.gd" id="7_l5is6"]
[ext_resource type="Texture2D" uid="uid://d1rnxdhc2n7dq" path="res://car minigame/tire_no_screws.png" id="8_b85t4"]
[ext_resource type="Script" uid="uid://ss7brhupvsxy" path="res://car_done.gd" id="13_e68oj"]

[sub_resource type="CircleShape2D" id="CircleShape2D_13meq"]
radius = 22.30219

[sub_resource type="CircleShape2D" id="CircleShape2D_6x0t5"]
radius = 74.96666

[sub_resource type="CircleShape2D" id="CircleShape2D_d06jm"]
radius = 73.24616

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6x0t5"]
radius = 32.0
height = 224.0

[sub_resource type="CircleShape2D" id="CircleShape2D_6ox5g"]
radius = 49.0408

[node name="car minigame" type="Node2D"]
script = ExtResource("1_d0wqu")

[node name="background" type="Sprite2D" parent="."]
position = Vector2(592, 395)
texture = ExtResource("1_4nvyi")

[node name="Label" type="Label" parent="background"]
offset_left = -420.0
offset_top = -345.0
offset_right = 406.0
offset_bottom = -303.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Change the spare tire (do everything in the correct order)"

[node name="Label2" type="Label" parent="background"]
offset_left = -528.0
offset_top = 157.0
offset_right = -65.0
offset_bottom = 371.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Controls:
- Click screwdriver to pick it up
- Click again to put it down
- Click wheel with screwdriver to screw/unscrew
- Drag wheels to change"

[node name="car" type="Area2D" parent="."]
position = Vector2(632, 328)
scale = Vector2(3.5, 3.5)
script = ExtResource("3_offks")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="car"]
texture = ExtResource("5_0lj0v")

[node name="CollisionShape2D" type="CollisionShape2D" parent="car"]
position = Vector2(-82.28572, 0.57142925)
rotation = 1.5707964
shape = SubResource("CircleShape2D_13meq")

[node name="old_tire" type="Area2D" parent="."]
position = Vector2(340, 329)
script = ExtResource("4_13meq")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="old_tire"]
position = Vector2(2.3841858e-07, 7.867813e-06)
scale = Vector2(3.5, 3.5)
texture = ExtResource("4_dlhb1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="old_tire"]
position = Vector2(3, 3)
shape = SubResource("CircleShape2D_6x0t5")

[node name="new_tire" type="Area2D" parent="."]
position = Vector2(642, 611)
script = ExtResource("7_l5is6")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="new_tire"]
position = Vector2(-4.7683716e-07, -5.9604645e-08)
scale = Vector2(3.5, 3.5)
texture = ExtResource("8_b85t4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="new_tire"]
position = Vector2(4, 3)
shape = SubResource("CircleShape2D_d06jm")

[node name="wrench" type="Area2D" parent="."]
script = ExtResource("5_6ox5g")

[node name="CollisionShape2D" type="CollisionShape2D" parent="wrench"]
position = Vector2(951, 516)
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_6x0t5")

[node name="Sprite2D" type="Sprite2D" parent="wrench"]
position = Vector2(940, 517.00006)
rotation = 1.5707964
scale = Vector2(3, 3)
texture = ExtResource("5_6x0t5")

[node name="Button" type="Button" parent="."]
offset_left = 926.0
offset_top = 634.0
offset_right = 1072.0
offset_bottom = 723.0
theme_override_font_sizes/font_size = 30
text = "Back"

[node name="hand" type="CharacterBody2D" parent="."]
script = ExtResource("3_nlt58")

[node name="CollisionShape2D" type="CollisionShape2D" parent="hand"]
position = Vector2(1, 18)
shape = SubResource("CircleShape2D_6ox5g")

[node name="playerhand" type="Sprite2D" parent="hand"]
position = Vector2(0, 57)
scale = Vector2(1.5, 1.5)
texture = ExtResource("4_0lj0v")

[node name="done" type="Label" parent="."]
offset_left = 454.0
offset_top = 232.0
offset_right = 737.0
offset_bottom = 369.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 100
text = "Done!"
script = ExtResource("13_e68oj")

[connection signal="area_entered" from="car" to="." method="_on_car_area_entered"]
[connection signal="area_entered" from="car" to="car" method="_on_area_entered"]
[connection signal="area_entered" from="car" to="old_tire" method="_on_car_area_entered"]
[connection signal="area_entered" from="car" to="new_tire" method="_on_car_area_entered"]
[connection signal="area_exited" from="car" to="old_tire" method="_on_car_area_exited"]
[connection signal="body_entered" from="old_tire" to="hand" method="_on_old_tire_body_entered"]
[connection signal="body_exited" from="old_tire" to="hand" method="_on_old_tire_body_exited"]
[connection signal="mouse_entered" from="old_tire" to="." method="_on_old_tire_mouse_entered"]
[connection signal="body_entered" from="new_tire" to="hand" method="_on_new_tire_body_entered"]
[connection signal="body_exited" from="new_tire" to="hand" method="_on_new_tire_body_exited"]
[connection signal="area_entered" from="wrench" to="hand" method="_on_wrench_area_entered"]
[connection signal="body_entered" from="wrench" to="." method="_on_wrench_body_entered"]
[connection signal="body_entered" from="wrench" to="wrench" method="_on_body_entered"]
[connection signal="body_entered" from="wrench" to="hand" method="_on_wrench_body_entered"]
[connection signal="body_exited" from="wrench" to="." method="_on_wrench_body_exited"]
[connection signal="body_exited" from="wrench" to="wrench" method="_on_body_exited"]
[connection signal="body_exited" from="wrench" to="hand" method="_on_wrench_body_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
